# xrun

./: .gitignore  .markdownlint.yaml  .mergify.yml  .mise.toml  404.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  cliff.toml  clippy.toml  index.html  mise.toml  mkdocs.yml  release-plz.toml  renovate.json  requirements.txt  rust-toolchain.toml  sitemap.xml
.cargo/: config.toml
.claude/commands/: pr-summary.md
.claude/skills/open-pr/: SKILL.md
.claude/skills/pr-summary/: SKILL.md
.cursor/skills/pr-summary/: SKILL.md
.github/: pull_request_template.md  renovate.json
.github/workflows/: CI.yml  Publish.yml  Release.yml  autofix.yml  gh-pages.yml  release-plz.yml
changelog/: index.html
docs/: _config.yml  changelog.md  githubaction.md  howtouse.md  index.md  installation.md  installing.md  license.md  readme.md  using.md  website.json
docs/changelog/: index.md
docs/theme/: main.html
githubaction/: index.html
howtouse/: index.html
installation/: index.html
license/: index.html
sample/: .gitignore
sample/sample/: ContentView.swift  sampleApp.swift
sample/sample.xcodeproj/: project.pbxproj
sample/sample.xcodeproj/xcshareddata/xcschemes/: sample.xcscheme
sample/sampleTests/: sampleTests.swift
search/: search_index.json
src/: args.rs  header.rs  lib.rs  main.rs  output.rs  pdf_report.rs  results.rs  spinner.rs  text_utils.rs  utils.rs  validation.rs  validation_lines.rs  validator.rs
tests/: text_utils_tests.rs  validation_lines_tests.rs  validator_tests.rs
