[package]
name = "xrun"
version = "0.12.0"
edition = "2021"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
license = "MIT"
description = "Command Line Tools for macOS. With xrun you can run Xcode unit tests faster through the terminal."
readme = "README.md"
repository = "https://github.com/heroesofcode/xrun"
exclude = [".github/**", "sample/*", "docs/*"]
categories = ["command-line-utilities", "development-tools"]
keywords = ["iOS", "macOS", "CLI", "xrun", "Xcode"]

[package.metadata]
msrv = "1.74.1"

[dependencies]
comfy-table = "7.1.4"
colored = "3"
clap = "4.5.37"
printpdf = "0.7.0"