[package]
name = "xrun"
version = "0.16.0"
edition = "2024"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
license = "MIT"
description = "Command Line Tools for macOS. With xrun you can run Xcode unit tests faster through the terminal."
readme = "README.md"
repository = "https://github.com/heroesofcode/xrun"
exclude = [".github/**", "sample/*", "docs/*"]
categories = ["command-line-utilities", "development-tools"]
keywords = ["iOS", "macOS", "CLI", "xrun", "Xcode"]

[package.metadata]
msrv = "1.74.1"

[dependencies]
comfy-table = "7.2.1"
colored = "3.0.0"
clap = { version = "4.5.53", features = ["derive"] }
printpdf = "0.9.0"
indicatif = "0.18.3"
rascii_art = "0.4.5"